<resources>
    <string name="app_name">Зелень</string>
    <string name="title_map">Карта</string>
    <string name="title_settings">Настройки</string>
    <string name="title_news">Новости</string>
    <string name="title_account">Аккаунт</string>
    <string name="location_permission_denied">location permission denied</string>
    <string name="permission_required_toast">permission required toast</string>
    <string name="permission_rationale_location">permission rationale location</string>
    <string name="location">location</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Почта</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_in_short">Зарегистрироваться</string>
    <string name="action_recover_password">Восстановить</string>
    <string name="action_recover_password_long">Восстановить пароль</string>
    <string name="action_forgot_password">Забыли пароль?</string>
    <string name="action_go_to_register">Регистрация</string>
    <string name="action_go_to_authorization">Авторизация</string>
    <string name="action_go_to_settings">Настройки</string>
    <string name="action_go_to_about_app">О приложении</string>
    <string name="welcome">"Welcome!"</string>
    <string name="settings">Настройки</string>
    <string name="text_in_about">Наше приложение поможет пользователю ближе познакомиться с темой раздельной утилизации отходов! \n \n В интерфейсе реализовано окно карты с местоположением точек различных типов мусора, а также система фильтрации, позволяющая отсортировать все имеющиеся точки по типу отходов. \n \n Имеется раздел новостной ленты, в которой собраны все важные и интересные новости по теме раздельного сбора мусора в городе и советы по их сортировке. \n \n Реализована система авторизации с помощью адреса электронной почты различных сервисов, например Google Mail, Яндекс.Почта, Mail.ru. Авторизация, регистрация и восстановление пароля проводится быстро и без лишних усилий. \n \n Само пользование приложением обещает быть приятным и легким.</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="map_fragment_address_not_found">Адрес не найден</string>
    <string name="map_fragment_type_all">Всё</string>
    <string name="map_fragment_type_plastic">Пластик</string>
    <string name="map_fragment_type_glass">Стекло</string>
    <string name="map_fragment_type_batteries">Батарейки</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>