<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.raremode.gorodskoy.ui.fragments.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.raremode.gorodskoy.ui.fragments.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.raremode.gorodskoy.ui.fragments.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news">
        <action
            android:id="@+id/action_navigation_news_to_newsOpenedFragment"
            app:destination="@id/newsOpenedFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_account"
        android:name="com.raremode.gorodskoy.ui.fragments.account.AccountFragment"
        android:label="AccountFragment"
        tools:layout="@layout/fragment_account" >
        <action
            android:id="@+id/action_navigation_account_to_accountLoginFragment"
            app:destination="@id/accountLoginFragment" />
    </fragment>
    <fragment
        android:id="@+id/newsOpenedFragment"
        android:name="com.raremode.gorodskoy.ui.fragments.newsopened.NewsOpenedFragment"
        android:label="fragment_news_opened"
        tools:layout="@layout/fragment_news_opened" />
    <fragment
        android:id="@+id/accountLoginFragment"
        android:name="com.raremode.gorodskoy.ui.login.AccountLoginFragment"
        android:label="fragment_account_login"
        tools:layout="@layout/fragment_account_login" >
        <action
            android:id="@+id/action_accountLoginFragment_to_navigation_account"
            app:destination="@id/navigation_account" />
    </fragment>
</navigation>